# industrial_calibration_ros2

./: CHANGELOG.rst  CMakeLists.txt  README.md  dependencies.repos  package.xml  plugin_description.xml
.github/workflows/: docker.yml  ubuntu.yml
config/: collection_config.yaml  extrinsic_hand_eye_calibration.rviz  target_detector_config.yaml
docker/: 3d_data_collection.sh  Dockerfile  data_collection.sh  docker-compose.override.yml  docker-compose.yml  extrinsic_calibration_gui.sh  intrinsic_calibration_gui.sh
docs/: architecture.drawio
include/industrial_calibration_ros/: target_detector.h
launch/: 3d_data_collection.launch  3d_data_collection.launch.xml  data_collection.launch  data_collection.launch.xml
scripts/: 3d_data_collection_node.py  data_collection_node.py  image_trigger.py  photoneo_data_collection_node.py
src/: extrinsic_hand_eye_calibration_panel.cpp  pnp_validation_node.cpp  target_detector.cpp  utils.h
