<?xml version="1.0"?>
<package format="2">
  <name>industrial_calibration_ros</name>
  <version>0.0.0</version>
  <description>The industrial_calibration_ros package</description>

  <maintainer email="ychen@swri.org">ychen</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>yaml-cpp</depend>
  <depend>boost_plugin_loader</depend>
  <depend>industrial_calibration</depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
